syntax = "proto3";

package deploy.v1;

import "variables/v1/env.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/types/components/deploy/v1";

// ContainerConfig is a first pass at exposing how we'd like to be able to run a container for a user. It leverages the
// yaml-less config from waypoint https://developer.hashicorp.com/waypoint/docs/kubernetes/kubectl-deploy
//
// it's worth mentioning that while this container should work for basic use cases (such as a basic server/worker etc),
// we shouldn't try to boil the ocean here. If a customer has custom needs they should use a helm chart or k8s directory
// for configuration
message BasicConfig {
  // listen_port is optional, and controls whether a url gets exposed for the container. When we follow up with actual
  // url support (and custom domains) this will probably change and be in it's own config etc.
  int32 instance_count = 1;

  optional ListenerConfig listener_cfg = 2;

  // args are container args
  repeated string args = 5;

  // mem / cpu requests
  optional string cpu_request = 6;
  optional string cpu_limit = 7;
  optional string mem_request = 8;
  optional string mem_limit = 9;

  variables.v1.EnvVars env_vars = 11;
}

message ListenerConfig {
  // NOTE: this should default to port 8080
  int32 listen_port = 2;
  string health_check_path = 3;
}
